# d4scienceauth

./: README.md  requirements.txt  setup.cfg
d4scienceauth/: d4science.py
